tests/snapshots/yaml_suite_snapshots__yaml_suite_RTP8_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 9.2. Document Markers
  from: "http://www.yaml.org/spec/1.2/spec.html#id2800866"
  tags: spec header footer
  yaml: "%YAML 1.2\n---\nDocument\n... # Suffix\n"
  tree: "+STR\n +DOC ---\n  =VAL :Document\n -DOC ...\n-STR\n"
  json: "\"Document\"\n"
  dump: "--- Document\n...\n"
