tests/snapshots/yaml_suite_snapshots__yaml_suite_RTP8_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- Document\n...\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2800866"
  json: "\"Document\"\n"
  name: Spec Example 9.2. Document Markers
  tags: spec header footer
  tree: "+STR\n +DOC ---\n  =VAL :Document\n -DOC ...\n-STR\n"
  yaml: "%YAML 1.2\n---\nDocument\n... # Suffix\n"
