tests/snapshots/yaml_suite_snapshots__yaml_suite_RXY3_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid document-end marker in single quoted string
  from: "@perlpunk"
  tags: footer single error
  fail: true
  yaml: "---\n'\n...\n'\n"
  tree: "+STR\n +DOC ---\n"
