tests/snapshots/yaml_suite_snapshots__yaml_suite_RXY3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid document-end marker in single quoted string
  tags: footer single error
  tree: "+STR\n +DOC ---\n"
  yaml: "---\n'\n...\n'\n"
