tests/snapshots/yaml_suite_snapshots__yaml_suite_RZT7_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.28. Log File
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761866"
  tags: spec header literal mapping sequence
  yaml: "---\nTime: 2001-11-23 15:01:42 -5\nUser: ed\nWarning:\n  This is an error message\n  for the log fi…"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :Time\n   =VAL :2001-11-23 15:01:42 -5\n   =VAL :User\n   =VAL :ed\n…"
  json: "{\n  \"Time\": \"2001-11-23 15:01:42 -5\",\n  \"User\": \"ed\",\n  \"Warning\": \"This is an error message …"
  dump: "---\nTime: 2001-11-23 15:01:42 -5\nUser: ed\nWarning: This is an error message for the log file\n…"
