tests/snapshots/yaml_suite_snapshots__yaml_suite_RZT7_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\nTime: 2001-11-23 15:01:42 -5\nUser: ed\nWarning: This is an error message for the log file\n---\nTime: 2001-11-23 15:02:31 -5\nUser: ed\nWarning: A slightly different error message.\n---\nDate: 2001-11-23 15:03:17 -5\nUser: ed\nFatal: Unknown variable \"bar\"\nStack:\n- file: TopClass.py\n  line: 23\n  code: |\n    x = MoreObject(\"345\\n\")\n- file: MoreClass.py\n  line: 58\n  code: |-\n    foo = bar\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761866"
  json: "{\n  \"Time\": \"2001-11-23 15:01:42 -5\",\n  \"User\": \"ed\",\n  \"Warning\": \"This is an error message for the log file\"\n}\n{\n  \"Time\": \"2001-11-23 15:02:31 -5\",\n  \"User\": \"ed\",\n  \"Warning\": \"A slightly different error message.\"\n}\n{\n  \"Date\": \"2001-11-23 15:03:17 -5\",\n  \"User\": \"ed\",\n  \"Fatal\": \"Unknown variable \\\"bar\\\"\",\n  \"Stack\": [\n    {\n      \"file\": \"TopClass.py\",\n      \"line\": 23,\n      \"code\": \"x = MoreObject(\\\"345\\\\n\\\")\\n\"\n    },\n    {\n      \"file\": \"MoreClass.py\",\n      \"line\": 58,\n      \"code\": \"foo = bar\"\n    }\n  ]\n}\n"
  name: Spec Example 2.28. Log File
  tags: spec header literal mapping sequence
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :Time\n   =VAL :2001-11-23 15:01:42 -5\n   =VAL :User\n   =VAL :ed\n   =VAL :Warning\n   =VAL :This is an error message for the log file\n  -MAP\n -DOC\n +DOC ---\n  +MAP\n   =VAL :Time\n   =VAL :2001-11-23 15:02:31 -5\n   =VAL :User\n   =VAL :ed\n   =VAL :Warning\n   =VAL :A slightly different error message.\n  -MAP\n -DOC\n +DOC ---\n  +MAP\n   =VAL :Date\n   =VAL :2001-11-23 15:03:17 -5\n   =VAL :User\n   =VAL :ed\n   =VAL :Fatal\n   =VAL :Unknown variable \"bar\"\n   =VAL :Stack\n   +SEQ\n    +MAP\n     =VAL :file\n     =VAL :TopClass.py\n     =VAL :line\n     =VAL :23\n     =VAL :code\n     =VAL |x = MoreObject(\"345\\\\n\")\\n\n    -MAP\n    +MAP\n     =VAL :file\n     =VAL :MoreClass.py\n     =VAL :line\n     =VAL :58\n     =VAL :code\n     =VAL |foo = bar\n    -MAP\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\nTime: 2001-11-23 15:01:42 -5\nUser: ed\nWarning:\n  This is an error message\n  for the log file\n---\nTime: 2001-11-23 15:02:31 -5\nUser: ed\nWarning:\n  A slightly different error\n  message.\n---\nDate: 2001-11-23 15:03:17 -5\nUser: ed\nFatal:\n  Unknown variable \"bar\"\nStack:\n  - file: TopClass.py\n    line: 23\n    code: |\n      x = MoreObject(\"345\\n\")\n  - file: MoreClass.py\n    line: 58\n    code: |-\n      foo = bar\n"
