tests/snapshots/yaml_suite_snapshots__yaml_suite_S3PD_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 8.18. Implicit Block Mapping Entries
  from: "http://www.yaml.org/spec/1.2/spec.html#id2798896"
  tags: empty-key spec mapping
  yaml: "plain key: in-line value\n: # Both empty\n\"quoted key\":\n- entry\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :plain key\n   =VAL :in-line value\n   =VAL :\n   =VAL :\n   =VAL \"quoted key\n   +SEQ\n    =VAL :entry\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  emit: "plain key: in-line value\n:\n\"quoted key\":\n- entry\n"
